add purchase api method
